@@ -182,6 +182,7 @@ class UpgradeCompatibilitySnippet extends \MUtil_Snippets_SnippetAbstract
         $obsFunctions = array(
             'Gems_User_User' => array(
                 'getAppointmentFieldVale'   => 'getAppointmentFieldValue',
+                'getAvailableMailTemplates' => 'CommTemplateUtil->getCommTemplatesForTarget',
                 'hasAllowedRole'            => 'inAllowedGroup',
                 'refreshAllowedStaffGroups' => null,
                 ),
@@ -190,9 +191,9 @@ class UpgradeCompatibilitySnippet extends \MUtil_Snippets_SnippetAbstract
             foreach ($functions as $funcName => $replacement) {
                 if (preg_match(sprintf('/->%s\(/', preg_quote($funcName)), $content)) {
                     if ($replacement) {
-                        $messages[] = "The code in this file seems to use the obsolete class $className function '$funcName'. Use the '$replacement' function instead.";
+                        $messages[] = "The code in this file seems to use the obsolete class $className function '$funcName()'. Use the '$replacement()' function instead.";
                     } else {
-                        $messages[] = "The code in this file seems to use the obsolete class $className function '$funcName'.";
+                        $messages[] = "The code in this file seems to use the obsolete class $className function '$funcName()'.";
                     }
                 }
             }
