@@ -7,6 +7,7 @@ New features:
 Interface improvements:
     Improved interface for communication templates and automatic mail
     The Contact => Bugs and GemsTracker pages have been refreshed with a default bugs url (use Roles to make invisible)
+    Editing staff and organizations uses defaults for smoother creation
 Rights:
     The types of staff that a user can create/edit are determined at the group level
     Roles only determine what menu items are allowed, you no longer need to have a right to assign it to another staff
